app/assets/stylesheets/components/_cta.scss
// Faire forme CTA et style à part

.cta-primary {
  display: block;
  width: fit-content;
  margin: 52px auto 0px auto;
  padding: 0.8rem 2rem;
  background-color: $yellow;
  border-radius: 5px;
  text-transform: uppercase;
  text-align: center;
  font-weight: 700;
  color: $black !important;
  cursor: pointer;
  -webkit-transition: ease-out 0.5s;
  -moz-transition: ease-out 0.5s;
  transition: ease-out 0.5s;
  &:hover {
    box-shadow: inset 400px 0 0 0 #FFA11F;
    color: $white !important;
    // border: 1px solid white;
  }
}

.cta-primary-black {
    display: block;
    width: fit-content;
    margin: 52px auto 0px auto;
    padding: 0.8rem 3rem;
    background-color: $black;
    border-radius: 5px;
    text-transform: uppercase;
    font-weight: 700;
    color: white;
    cursor: pointer;
    -webkit-transition: ease-out 0.5s;
    -moz-transition: ease-out 0.5s;
    transition: ease-out 0.5s;
    &:hover {
      box-shadow: inset 400px 0 0 0 $yellow;
      color: $black;
    }
  }

.cta-secondary-white {
  width: fit-content;
  color: $black;
  font-size: 1em;
  margin: 52px auto 0px auto;
  padding: 0.5rem 1.5rem;
  display: block;
  text-align: center;
  border-radius: 25px;
  border: 1px solid $black;
  cursor: pointer;
  -webkit-transition: ease-out 0.5s;
  -moz-transition: ease-out 0.5s;
  transition: ease-out 0.5s;
  &:hover {
    box-shadow: inset 400px 0 0 0 $black;
    color: white;
  }
}

.cta-secondary-black {
  background: $black;
  min-width: fit-content;
  color: white;
  font-size: 1em;
  margin: 52px auto 0px auto;
  padding: 0.5rem 1.5rem;
  display: block;
  text-align: center;
  border-radius: 25px;
  border: 1px solid white;
  cursor: pointer;
  -webkit-transition: ease-out 0.5s;
  -moz-transition: ease-out 0.5s;
  transition: ease-out 0.5s;
  &:hover {
    box-shadow: inset 400px 0 0 0 white;
    color: $black;
  }
}

.cta-secondary-yellow {
  background: $yellow;
  min-width: fit-content;
  color: $black !important;
  font-size: 1em;
  margin: 52px auto 0px auto;
  padding: 0.5rem 1.5rem;
  display: block;
  text-align: center;
  border-radius: 25px;
  cursor: pointer;
  -webkit-transition: ease-out 0.5s;
  -moz-transition: ease-out 0.5s;
  transition: ease-out 0.5s;
  &:hover {
    box-shadow: inset 400px 0 0 0 #FFA11F;
    color: $white !important;
  }
}
.fas-stylized {
  font-size: 1.8em;
  margin: 0em 0em 0.2em 3em;
  transition: 500ms ease all;
}

.pointer {
  cursor: pointer;
}

.trigger-active {
  transform: rotate(180deg);
}

// yellow hover from right
.button_slide {
  cursor: pointer;
  -webkit-transition: ease-out 0.5s;
  -moz-transition: ease-out 0.5s;
  transition: ease-out 0.5s;
  padding: 0.25rem;
  margin: 1rem;
  max-width: 80%;
}

.button_slide:hover {
  box-shadow: inset 400px 0 0 0 #FFD02B;
  & a {
    color: $black;
  }
}

.slide_right-active {
  box-shadow: inset 400px 0 0 0 #FFD02B;
  & a {
    color: $black;
  }
}

.btn-left-xl {
  margin-left: 0px;
}

// ----------

@media (max-width: 420px) {
  .fas-stylized {
    margin: 0em 0em 0.2em 1em;
  }

  .button_slide {
    width: min-content;
    margin: 0rem 1rem 1rem 0rem;
    padding: 0.2rem 0.3rem 0.2rem 0.2rem;
  }

  .cta-secondary-yellow {
    margin-top: 24px;
  }

  .cta-secondary-black {
    margin-top: 24px;
  }

  .btn-left-xl {
    margin-left: auto;
  }
}

@media (max-width: 880px) {
 .cta-secondary-yellow {
    margin-top: 24px;
    min-width: 100%;
  }
    .cta-secondary-black {
    min-width: 100%;
    margin-bottom: 1rem;
  }
  .cta-primary {
    padding: 0.8rem 1.8rem;
    font-size: 0.9rem;
  }

  .fas-stylized {
    margin: 0em 0em 0.2em 2em;
  }
}

